--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <style>
+      body,
+      html {
+        background-color: rgb(24, 23, 28);
+        color: white;
+      }
+    </style>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta
@@ -21,7 +28,7 @@
     />
     <title>Type.GG</title>
   </head>
-  <body style="background-color: rgb(24, 23, 28);">
+  <body>
     <noscript>
       <strong
         >We're sorry but Type.GG doesn't work properly without JavaScript
