--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <style>
-      body,
-      html {
-        background-color: rgb(24, 23, 28);
-        color: white;
-      }
-    </style>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta
@@ -28,7 +21,7 @@
     />
     <title>Type.GG</title>
   </head>
-  <body>
+  <body style="background-color: rgb(24, 23, 28); color: white;">
     <noscript>
       <strong
         >We're sorry but Type.GG doesn't work properly without JavaScript
